# model-regression-detector

./: .env.example  .gitignore  Dockerfile  README.md  loom_script.md  portfolio_blog_post.md  pyproject.toml
.github/workflows/: eval.yml
data/: golden_dataset_mini_v1.0.0.json  golden_dataset_v1.0.0.json
data/results/: run_2ed455ed-b12a-4f1d-88bc-e566a884e8c6.json  run_3252dea1-829b-45a8-a42a-47336bd26701.json  run_407c866d-6c42-413b-b84f-af667d53e166.json  run_43d500a4-3ad4-4406-840a-4aeed26e2e55.json  run_a539aaed-ad6c-43a2-a7fd-814d07eec12a.json
prompts/: v1.0.0.yaml  v1.1.0.yaml
scripts/: curate_dataset.py  post_pr_comment.py  pre-push  run_eval.py
src/: __init__.py  alerts.py  classifier.py  comparison.py  dataset_loader.py  eval_diff.py  eval_runner.py  eval_store.py  judge.py  models.py  prompt_loader.py  scoring.py  storage.py
tests/: test_alerts.py  test_classifier.py  test_eval_engine.py  test_golden_dataset.py  test_models.py  test_prompt_loader.py
