[project]
name = "model-regression-detector"
version = "0.1.0"
description = "CI/CD pipeline for detecting LLM quality regressions against a golden dataset"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "google-genai",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]
eval = [
    "aiohttp>=3.9.0",
    "jinja2>=3.1.0",
    "requests>=2.31.0",
]
all = [
    "model-regression-detector[dev,eval]",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
